# tinypet

./: .gitignore  LICENSE  README.md  example.ipynb  pixi.toml  pyproject.toml
src/tinypet/: core.py  data.py  operations.py  sampler.py
