[project]
authors = [{name = "Maxime RIO", email = "maxime.rio@niwa.co.nz"}]
dependencies = []
name = "tinypet"
requires-python = ">= 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
tinypet = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
jupyterlab = ">=4.4.7,<5"
xarray = ">=2025.9.0,<2026"
zarr = ">=3.1.2,<4"
dask = ">=2025.7.0,<2026"
gcsfs = ">=2025.9.0,<2026"
pandas = ">=2.3.2,<3"
ruff = ">=0.13.0,<0.14"
